<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robstride_ros2</name>
  <version>0.1.0</version>
  <description>ros2_control hardware component for RobStride CAN actuators via ros2_socketcan.</description>
  <maintainer email="ykturtler@outlook.com">yamato</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/s2015-turtle/robstride_ros2</url>
  <url type="repository">https://github.com/s2015-turtle/robstride_ros2.git</url>
  <url type="bugtracker">https://github.com/s2015-turtle/robstride_ros2/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>can_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_socketcan</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
