<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robstride_driver</name>
  <version>0.1.0</version>
  <description>Protocol, CAN transport, and motor driver library for RobStride actuators.</description>
  <maintainer email="ykturtler@outlook.com">yamato</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/s2015-turtle/robstride_ros2</url>
  <url type="repository">https://github.com/s2015-turtle/robstride_ros2.git</url>
  <url type="bugtracker">https://github.com/s2015-turtle/robstride_ros2/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>can_msgs</depend>
  <depend>rclcpp</depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
